gitops/manifests/broker/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp-amq-broker
spec:
  to:
    kind: Service
    name: ocp-amq-broker
    weight: 100
  port:
    targetPort: web-console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp-amq-broker-61616
spec:
  to:
    kind: Service
    name: ocp-amq-broker
    weight: 100
  port:
    targetPort: core-messaging
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp-amq-broker-61617
spec:
  to:
    kind: Service
    name: ocp-amq-broker
    weight: 100
  port:
    targetPort: core-messaging-tls
  tls:
    termination: passthrough
  wildcardPolicy: None
